fixed data sampling

--- a/A3/A3_v4_fixing_data_sampling.Rmd
+++ b/A3/A3_v4_fixing_data_sampling.Rmd
@@ -52,57 +52,44 @@ feedback <- rep(NA, trials)
 rating1 <- rep(NA, trials)
 other <- rep(NA, trials)
 rating2 <- rep(NA,trials)
+rating1_probability <- rep(NA,trials)
+rating2_probability <- rep(NA,trials)
+other_probability <- rep(NA,trials)
 
 # creating rating and other
 for (i in 1:trials){
   rating1[i] <- round(inv_logit_scaled(rnorm(1, 0, 0.85))*9, 0)
-
   
+  # fixing out of bounds
   rating1[i] = ifelse(rating1[i] > 8, 8,
-                      ifelse(rating1[i]<1, 1, 
+                      ifelse(rating1[i]<1, 1,
                              rating1[i]))
 
-  #while (rating1[i] > 8 || rating1[i] < 1){
-  #  rating[i] = round(inv_logit_scaled(rnorm(1, 0, 0.85))*9, 0)
-  #}
-
-  feedback_temp = sample(c(-3, -2, 0, 2, 3), 1)
-  other[i] = rating1[i] + feedback_temp
+  rating1_probability[i] = rating1[i]/9
   
-  other[i] = ifelse(other[i] > 8, 8,
-                      ifelse(other[i]<1, 1, 
-                             other[i]))
+  # from Kathrine's code
+  other[i] <- 0
+  while (other[i] < 1 | other[i] > 8){ # while group rating out of scope
+    feedback[i] <- sample(c(-3, -2, 0, 2, 3), 1, replace = TRUE)
+    other[i] = rating1[i] + feedback[i]
+  }
   
-  # while (other[i]>8 || other[i]<1){
-  #  feedback_temp = sample(c(-3, -2, 0, 2, 3), 1)
-  #   other[i] = rating1[i] + feedback_temp
-  # }
-  
-  # saving variables
-  feedback[i] = feedback_temp
   trial_no[i] = i
-}
-
-# create probs
-rating1_probability = rating1/9
-other_probability = other/9
+  other_probability[i] = other[i]/9
 
 # create rating2
-rating2_probability = SimpleBayes_f(bias, rating1_probability, other_probability)
+  rating2_probability[i] = SimpleBayes_f(bias, rating1_probability[i], other_probability[i])
 
-# fixing bounds for probability
-for(i in 1:trials){
-  rating2_probability[i] = ifelse(
-    rating2_probability[i] > 0.92, 0.88,
-      ifelse(rating2_probability[i] < 0.09, 0.11,
-             rating2_probability[i])
-    )
+  rating2[i] <- ifelse(round(rating2_probability[i]*9,0) <1, 1,
+                       ifelse(round(rating2_probability[i]*9,0) > 8, 8,
+                       round(rating2_probability[i]*9, 0)))
+
 }
-# make rating 2 not prob
-rating2 = round(rating2_probability * 9, 0)
 
 # save in df
-df_SB <- tibble(trial_no, bias, rating1, other, feedback, rating2, rating1_probability, other_probability, rating2_probability)
+df_SB <- tibble(
+  trial_no, bias, rating1, other, feedback, rating2, rating1_probability, other_probability, rating2_probability
+  )
 ```
 
 
@@ -113,13 +100,32 @@ mod_simpleBayes <- cmdstan_model(file, cpp_options = list(stan_threads = TRUE),
 ```
 
 ```{r draw samples}
+# # make data list
+#   data_simpleBayes <- list(
+#   trials = trials,
+#   rating2 = df_SB$rating2_probability, # outcome variable
+#   rating1 = df_SB$rating1_probability, # parameter
+#   other = df_SB$other_probability # parameter
+# )
+
+# kathrine's model
+# # make data list
+#   data_simpleBayes <- list(
+#   trials = ntrials,
+#   rating2 = s_df$temp_c, # outcome variable
+#   rating1 = s_df$Source1, # parameter
+#   other = s_df$Source2 # parameter
+# )
+
+# experiment with rating2 on 1-8 scale
 # make data list
   data_simpleBayes <- list(
   trials = trials,
-  rating2 = df_SB$rating2_probability, # outcome variable
+  rating2 = df_SB$rating2, # outcome variable
   rating1 = df_SB$rating1_probability, # parameter
   other = df_SB$other_probability # parameter
 )
+
 
   # fit model to data
 samples_SB <- mod_simpleBayes$sample(
@@ -139,6 +145,10 @@ samples_SB <- mod_simpleBayes$sample(
 # SB diagnostics
 ```{r stan diagnose}
 samples_SB$cmdstan_diagnose() 
+
+samples_SB$summary()
+samples_SB$loo()
+
 ```
 
 #chains 
@@ -157,7 +167,9 @@ ggplot(draws_SB, aes(.iteration, SD, group = .chain, color=.chain)) +
   labs(title = "Simple Bayes - SD") +
   theme_classic()
 ```
-As expected, it cannot really estimate SD.
+It cannot really estimate SD when bias is 0.
+It can, however estimate SD when bias does not equal 0.
+But when bias = 0,5, the estimate of bias is fixed at 0.5...
 
 # SB prior and posterior update plots
 ```{r}
@@ -172,7 +184,7 @@ ggplot(draws_SB) +
 
 # sd prior
 ggplot(draws_SB) +
-#  geom_density(aes(SD), fill="blue", alpha=0.3) +
+  geom_density(aes(SD), fill="blue", alpha=0.3) +
   geom_density(aes(SD_prior), fill="red", alpha=0.3) + # inv.logit bias_win_prior
   ylab("Posterior Density") +
   theme_classic() + 
@@ -186,19 +198,26 @@ ggplot(draws_SB) +
   theme_classic() + 
   labs(title = "Post distribution of SD")
 ```
+Bias is estimated to be around zero, when the data is simulated with bias = 0.
+
 If I run the above with bias = 0, bias is being estimated (although, it is estimated to be very close to 0 with little variance). If I, however, set bias = 0.5, the bias is not being estimated at all, but is fixed at 0.5...... that doesn't make sense to me.
 
 
 # Post preds
 ```{r post preds plot}
 draws_SB %>% mutate(
-  preds = round(inv_logit_scaled(`post_preds[5]`)*9, 0)
-) %>% 
+  preds = round(inv_logit_scaled(`post_preds[2]`)*9, 0)) %>% select(preds) %>%  print(round(inv_logit_scaled(preds)*9, 0)) #
+
+
+draws_SB %>% mutate(
+  preds = round(inv_logit_scaled(`post_preds[2]`)*9, 0)
+  ) %>% 
   ggplot() + 
   geom_histogram(aes(preds)) 
 ```
 
-
+Very little variation in the post preds of the SB with bias 0.
+Also very little variation in the post preds when bias = 0.4.
 
 ############################## Weighted Bayes ###############################
 # simulate data for WB
@@ -216,58 +235,45 @@ feedback <- rep(NA, trials)
 rating1 <- rep(NA, trials)
 other <- rep(NA, trials)
 rating2 <- rep(NA,trials)
+rating1_probability <- rep(NA,trials)
+rating2_probability <- rep(NA,trials)
+other_probability <- rep(NA,trials)
 
 for (i in 1:trials){
   rating1[i] <- round(inv_logit_scaled(rnorm(1, 0, 0.85))*9, 0)
 
-  
+  # fixing out of bounds
   rating1[i] = ifelse(rating1[i] > 8, 8,
                       ifelse(rating1[i]<1, 1, 
                              rating1[i]))
 
-  #while (rating1[i] > 8 || rating1[i] < 1){
-  #  rating[i] = round(inv_logit_scaled(rnorm(1, 0, 0.85))*9, 0)
-  #}
+  rating1_probability[i] = rating1[i]/9
 
-  feedback_temp = sample(c(-3, -2, 0, 2, 3), 1)
-  other[i] = rating1[i] + feedback_temp
-  
-  other[i] = ifelse(other[i] > 8, 8,
-                      ifelse(other[i]<1, 1, 
-                             other[i]))
-  
-  # while (other[i]>8 || other[i]<1){
-  #  feedback_temp = sample(c(-3, -2, 0, 2, 3), 1)
-  #   other[i] = rating1[i] + feedback_temp
-  # }
-  
+  # from Kathrine's code
+  other[i] <- 0
+  while (other[i] < 1 | other[i] > 8){ # while group rating out of scope
+    feedback[i] <- sample(c(-3, -2, 0, 2, 3), 1, replace = TRUE)
+    other[i] = rating1[i] + feedback[i]
+  }
+
   # saving variables
-  feedback[i] = feedback_temp
   trial_no[i] = i
-}
-
-# create probs
-rating1_probability = rating1/9
-other_probability = other/9
-
-# rating 2
-rating2_probability = WeightedBayes_f(bias, rating1_probability, other_probability, weight_self, weight_other)
-
-# fixing bounds for probability
-for(i in 1:trials){
-  rating2_probability[i] = ifelse(
-    rating2_probability[i] > 0.92, 0.88,
-      ifelse(rating2_probability[i] < 0.09, 0.11,
-             rating2_probability[i])
+  other_probability[i] = other[i]/9
+  
+  rating2_probability[i] = WeightedBayes_f(
+    bias, rating1_probability[i], other_probability[i], weight_self, weight_other
     )
-}
 
-rating2 = round(rating2_probability * 9, 0)
+  rating2[i] <- ifelse(round(rating2_probability[i]*9,0) <1, 1,
+                       ifelse(round(rating2_probability[i]*9,0) > 8, 8,
+                       round(rating2_probability[i]*9, 0)))
+}
 
 # save in df
 df_WB <- tibble(
   trial_no, bias, weight_self, weight_other, rating1, other, feedback, rating2, rating1_probability, other_probability, rating2_probability)
 ```
+
 
 # stan file
 ```{r}
@@ -279,9 +285,26 @@ model_WB <- cmdstan_model(file,
 
 # draw samples
 ```{r}
+# own model 
+# data_weighted_Bayes <- list(
+#   trials = trials,
+#   rating2 = df_WB$rating2_probability, # outcome variable
+#   rating1 = df_WB$rating1_probability, # parameter
+#   other = df_WB$other_probability # parameter
+# )
+
+# from kathrines model
+# data_weighted_Bayes <- list(
+#   trials = ntrials,
+#   rating2 = w_df$temp_c, # outcome variable
+#   rating1 = w_df$Source1, # parameter
+#   other = w_df$Source2 # parameter
+# )
+
+# experiment with rating2 on 1-8 scale
 data_weighted_Bayes <- list(
   trials = trials,
-  rating2 = df_WB$rating2_probability, # outcome variable
+  rating2 = df_WB$rating2, # outcome variable
   rating1 = df_WB$rating1_probability, # parameter
   other = df_WB$other_probability # parameter
 )
@@ -303,6 +326,9 @@ samples_WB <- model_WB$sample(
 # stan diagnostics
 ```{r}
 samples_WB$cmdstan_diagnose() # all good
+samples_WB$summary()
+samples_WB$loo()
+
 ```
 No divergent transitions, treedepth is good, etc. 
 
@@ -336,7 +362,7 @@ ggplot(draws_WB, aes(.iteration, w_other, group = .chain, color=.chain)) +
   theme_classic()
 
 ```
-chains look good
+chains look good with bias = 0.5
 
 # prior and posterior update plots
 
@@ -357,7 +383,7 @@ ggplot(draws_WB) +
   xlab("Rate") + # Tendency to choose 1 ??
   ylab("Posterior Density") +
   theme_classic() + 
-  labs(title = "Prior and post distribution of bias")
+  labs(title = "Prior and post distribution of SD")
 
 # weight self
 ggplot(draws_WB) +
@@ -381,13 +407,19 @@ ggplot(draws_WB) +
 
 # post preds plot
 ```{r}
-pacman::p_load(boot, scales)
-
 draws_WB %>% mutate(
-  preds = round(inv_logit_scaled(`post_preds[3]`)*9, 0)
+  preds = round(inv_logit_scaled(`post_preds[5]`)*9, 0) 
 ) %>% 
   ggplot() + 
   geom_histogram(aes(preds)) 
+
+draws_WB %>% mutate(
+  preds = round(inv_logit_scaled(`post_preds[45]`)*9, 0) 
+) %>% 
+  ggplot() + 
+  geom_histogram(aes(preds)) 
+
+
 
 # not a lot of variance in the post preds. does that mean that the model is very certain?
 
